Roman Festchook       roma@polesye.net                  27 Oct 2001
Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Sat Apr 27 00:49:08 BST 2002	Riley Williams <Riley@Williams.Name>

	* Tweaked include/linuxmt/string.h such that the definitions
	  therein match those on the GNU man pages for those functions.
	* Tweaked arch/i86/lib/bitops.c to match the revised prototypes
	  used above.
	* Ensured that the ELKS kernel compiles, and also that it boots
	  on my i80286 based laptop computer.

Sat Apr 27 00:16:36 BST 2002	Riley Williams <Riley@Williams.Name>

	* Labelled virtual memory swapping support as experimental, and
	  made it invisible unless CONFIG_EXPERIMENTAL is enabled.

Fri Apr 26 22:25:57 BST 2002	Riley Williams <Riley@Williams.Name>

	* Applied `make lint` to include/arch directory and cleaned up
	  or tagged as acceptable all bugs listed therein under the
	  -strict setting of splint, with the sole exception that in
	  include/arch/system.h the function load_regs is defined with
	  a signle parameter whose type is never declared.
	* Applied `make lint` to include/linuxmt directory and cleaned
	  up or tagged as acceptable all bugs listed therein under the
	  -strict setting of splint, with the exception of those found
	  in include/linuxmt/{mm,tqueue}.h which have still to be done.

Fri Apr 26 20:01:37 BST 2002	Riley Williams <Riley@Williams.Name>

	* Applied `make lint` to include/arch directory.
	* Fixed the bugs found in include/arch/io.h which several other
	  header files import.
	* Discovered that isti() is a reserved name, so changed it to
	  i_sti() throughout the ELKS source tree. Also changed icli()
	  to i_cli() throughout the ELKS source tree for consistency.