@@ -7,6 +7,7 @@
  *
  */
 
+#include <linuxmt/kernel.h>
 #include <linuxmt/types.h>
 #include <linuxmt/config.h>
 #include <linuxmt/sched.h>
